# imperal-mcp

./: .gitignore  CHANGELOG.md  LICENSE  PRIVACY.md  README.md  pyproject.toml  server.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: publish.yml  release.yml
.venv-test/: pyvenv.cfg
examples/: mcp-json-example.json
src/imperal_mcp/: auth.py  cli.py  client.py  config.py  gate.py  irkit.py  mask.py  server.py
tests/: test_auth.py  test_auth_refresh_taxonomy.py  test_client.py  test_config.py  test_gate.py  test_irkit.py  test_mask.py  test_server.py
