[project]
name = "imperal-mcp"
version = "0.3.0"
readme = "README.md"
description = "MCP server for building Imperal apps from any LLM/agent"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Imperal, Inc." }]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["mcp>=1.2.0", "imperal-sdk>=5.7.3", "httpx>=0.27"]

[project.urls]
Homepage = "https://imperal.io"
Repository = "https://github.com/imperalcloud/imperal-mcp"

[project.scripts]
imperal-mcp = "imperal_mcp.server:main"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "respx>=0.21"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/imperal_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
